2004-10-27  Ray Strode  <rstrode@redhat.com>

	* glib/gkeyfile.c:
	 (g_key_file_load_from_fd), 
	 (g_key_file_load_from_file): 
	 Move file is regular check to load_from_file to use
	 fstat() instead of race prone g_file_test().  Don't
	 clear/init until needed. Change error messages to be
	 more consistent.
	 (g_key_file_load_from_data),
	 (g_key_file_load_from_data_dirs),
	 (g_key_file_parse_data),
	 (g_key_file_get_value),
	 (g_key_file_get_string),
	 (g_key_file_set_string),
	 (g_key_file_get_string_list),
	 (g_key_file_set_string_list),
	 (g_key_file_set_locale_string),
	 (g_key_file_get_locale_string),
	 (g_key_file_set_locale_string_list),
	 (g_key_file_get_boolean),
	 (g_key_file_set_boolean),
	 (g_key_file_get_boolean_list),
	 (g_key_file_set_boolean_list),
	 (g_key_file_get_integer),
	 (g_key_file_get_integer_list),
	 (g_key_file_set_integer_list),
	 (g_key_file_remove_key):
	 Add more g_return_*if_fail checks for public functions.

2004-10-27  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version.

	* === Released 2.5.4 ===

2004-10-27  Matthias Clasen  <mclasen@redhat.com>

	Introduce the idea of a filename encoding, which is 
	*literally* the filename encoding on Unix. On windows, 
	use the Unicode name converted to UTF-8. (#101792,
	Tor Lillqvist, Owen Taylor)
	
	* glib/gdir.[hc]: 
	* glib/gconvert.[hc]: 
	* glib/gfileutils.[hc]: 
	* glib/gutils.[hc]: 
	* glib/giowin32.c: On Windows, keep old ABI versions 
	of GLib pathname api for DLL ABI stability. Use different 
	names for the new-style UTF-8 versions. Hide this through 
	a #define.

	* glib/gstdio.[hc]: New files containing wrappers for
	POSIX pathname api.

	* glib/glib.symbols: Add new symbols.

	* glib/makegalias.pl: Drop Win32 specific .def syntax,
	include gstdio.h

2004-10-27  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c: Fix includes. (#156500, #156499, 
	Kazuki IWAMOTO)

	* glib/Makefile.am (galias.h): Fix srcdir != builddir 